@@ -1,3 +1,4 @@
+* Setup default logging for WSGI app
 * Add format argument to report format_date function
 * Change expand attribute into a factor
 * Allow SQL expression as value of fields
